--- a/site.yml
+++ b/site.yml
@@ -19,9 +19,9 @@
     php_db_password: 'php_password'
 
   roles:
-    # - php_deployment # ok, phpinfo
-    - phpfpm # ok
+    - php_deployment # ok, phpinfo
     - nginx # ok
+    - phpfpm # ok
     - nvm-nodejs # ok
     - pgsql # ok
     - elsearch # ok
